# tecno-agricola-scraper

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
sample_output/: Products_Data.csv
src/: config.py  scraper.py  utils.py
tests/: test_scraper.py
tests/fixtures/: sample_product.html
